k/hello/resource-ingressroute-defn-run-knative.yaml
#ManagedBy: cue

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: defn-run-knative
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostRegexp(`{subdomain:[a-z0-9-]+}.default.defn.run`)
      kind: Rule
      services:
        - name: kourier-internal
          namespace: kourier-system
          kind: Service
